<resources>
    <string name="app_name">WTestLite</string>
    <string name="email_hint">example@example.com</string>
    <string name="message_hint">Your message here</string>
    <string name="number_hint">00000…</string>
    <string name="letter_code_hint">XYZ-ABCD</string>
    <string name="date_hint">Sunday, 4 November 2018</string>
    <string name="button_text">Submit</string>
    <string name="message_error">The message field cannot be empty</string>
    <string name="email_error">Please introduce a valid email address</string>
    <string name="number_error">The number field cannot be empty</string>
    <string name="code_error">The letter code field cannot be empty and must contain betweem 3 and 7 literal characters and hyphens</string>
    <string name="date_error">The date can\'t be a Monday and must be in the past</string>
    <string name="rating_error">Please choose a rating</string>
    <string name="comments_title">Comments</string>
</resources>
